src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
