src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
    Read foo.txt
