src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
    Read foo.txt, bar.txt
