src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: popup
---
  Save logs locally?

  The following files will be saved under ADAM_HOME/feedback:
    • adam-logs.log

› 1. Yes  Save the current Adam session logs locally for troubleshooting.
  2. No   Save feedback only, without logs.

  Press enter to confirm or esc to go back
