src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: snapshot
---
cells=1
■ Conversation interrupted - tell the model what to do differently. Something went wrong? Hit `/feedback` to report the issue.
