src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: terminal.backend()
---
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Adam to do anything                                                       "
"                                                                                "
"  gpt-5.3-codex · 100% left · ~/Workspace/adam/src/tui/app                      "
