src/tui/app/src/chatwidget/snapshots/adam_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running adam -m <model_name> or in your config.toml

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
